--- a/index.qmd
+++ b/index.qmd
@@ -43,14 +43,22 @@ All blocks are formatted as fenced divs, with the syntax
 ```markdown
 :::{.callout-NAME}
 
-This is a special callout block.
+This is a special callout block that is collapsed by default.
 
 :::
 ```
 
 where `NAME` is one of `exercise`, `answer`, and `hint`. By default,
-`exercise` is rendered unfolded, whereas the other blocks are rendered
-folded.
+all blocks are rendered collapsed, but can be opened by adding the
+attribute `collapse=false` to the fenced div:
+
+```markdown
+:::{.callout-NAME collapse=false}
+
+This is a special callout block that is open.
+
+:::
+```
 
 ### Example
 
@@ -59,7 +67,7 @@ The following example demonstrates the latter case:
 
 ```markdown
 
-:::{.callout-exercise}
+:::{.callout-exercise collapse=false}
 
 The `ls` command is used to list the contents of a directory. What
 option provides a so-called long listing format?
@@ -80,7 +88,7 @@ is `ls -l`.
 :::
 ```
 
-:::{.callout-exercise}
+:::{.callout-exercise collapse=false}
 
 The `ls` command is used to list the contents of a directory. What
 option provides a so-called long listing format?
